# ChangeLog for dev-libs/libtpl
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  28 Jan 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> +metadata.xml,
  +libtpl-1.2.ebuild:
  New Ebuild for bug 207821. Thanks to jokey and Tommy[D] for the review
