@@ -1,4 +1,4 @@
 DIST libtpl-1.2.tar.bz2 302548 RMD160 77c670da7c64159eea0fd11a261f105ff45b3409 SHA1 212a82dda48d7a543120bd92eecd27fa127859bc SHA256 516dc6598baf60066d6be9f54cac3a972ce665d36567ada8be25b558fcec9f2d
-EBUILD libtpl-1.2.ebuild 1060 RMD160 06252d63bbbd89f0658a9706ce90e7172e8cfce7 SHA1 ae2bba61ed01f2d2a457fe4ee20061b33dc69ef4 SHA256 a3d00afdf960fc56cd61a71815a50c95abf1622200cd657d4103e055b14d7661
-MISC ChangeLog 283 RMD160 6a12422d4c152d9e337d8953a8fa635a64e4e910 SHA1 8605261181c81782c50d2a274679721ce916b22e SHA256 f961c4435cfdc75102c7a719ee93f301202d15d0132a84712594916495f901a8
+EBUILD libtpl-1.2.ebuild 1236 RMD160 6b5ea9a1be58a7169a7afe8ba7963b0242f1a221 SHA1 f6706b174dfa8e6260a56231c77e843e5dc16b8e SHA256 f19092ef6d4950163aeb01802fca48c09ea8b6aaf4e78d4ab84551fb8bef196f
+MISC ChangeLog 542 RMD160 008d0f3a8de05de1f6656a5ac51432d210d18900 SHA1 f9874096f226b1b18c8ef064dd743bb214879f61 SHA256 8d4b6f116357853615d467bdad2c06f72574c92384b1c2d0563bd922362c76a1
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
